web-infras/parser/tests/fixtures/babel/core/uncategorised/465/output.txt
[SyntaxError]: Label has already been declared. (1,19)
1|x: while (true) { x: while (true) { } }
 |                 ^
